<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_40sdp"
    android:layout_marginEnd="@dimen/_40sdp"
    android:background="@drawable/shape_for_alert"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_alert_success" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.newproject.custom.CTextViewB
            style="@style/txt_000_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_this_task"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.newproject.custom.CTextViewB
            style="@style/txt_000_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nicolas_llc_clinic"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.newproject.custom.CTextView
            style="@style/txt_gray_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/are_you_sure_you_want_to_skip_this_task"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <com.newproject.custom.CButtonView
                android:id="@+id/buttonNo"
                style="@style/txt_blue_8"
                android:layout_width="123dp"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="start"
                android:background="@drawable/shape11"
                android:text="@string/no"
                android:textAllCaps="false" />

            <com.newproject.custom.CButtonView
                android:id="@+id/buttonYes"
                style="@style/txt_white_8"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/shape10"
                android:text="@string/yes"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
