<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.taskdetail.taskdetaildesc.view.TaskDetailsDescriptionActivity">

    <data>
        <variable
            name="viewClickHandler"
            type="com.newproject.ui.taskdetail.taskdetaildesc.viewmodel.TaskDetailsDescriptionViewModel.ViewClickHandler" />

        <variable
            name="viewModel"
            type="com.newproject.ui.taskdetail.taskdetaildesc.viewmodel.TaskDetailsDescriptionViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/topbarback"
                layout="@layout/top_bar_back" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.newproject.custom.CTextView
                            style="@style/txt_black_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/company_name" />

                        <com.newproject.custom.CTextViewB
                            android:id="@+id/txtCompanyName"
                            style="@style/txt_text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/al_forsan_health_clinic" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"

                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <com.newproject.custom.CTextView
                                    style="@style/txt_black_8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingStart="1dp"
                                    android:text="@string/area" />

                                <com.newproject.custom.CTextViewB
                                    android:id="@+id/txtArea"
                                    style="@style/txt_text_9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_1sdp"
                                    android:gravity="center"
                                    android:paddingStart="1dp"
                                    android:text="@string/jafza_z_1" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <com.newproject.custom.CTextView
                                    style="@style/txt_black_8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:paddingStart="1dp"
                                    android:text="@string/city" />

                                <com.newproject.custom.CTextViewB
                                    android:id="@+id/txtCity"
                                    style="@style/txt_text_9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_1sdp"
                                    android:gravity="center"
                                    android:paddingStart="1dp"
                                    android:text="@string/dubai" />

                            </LinearLayout>

                        </LinearLayout>

                        <com.newproject.custom.CTextView
                            style="@style/txt_black_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/person_name" />

                        <com.newproject.custom.CTextViewB
                            android:id="@+id/txtPersonName"
                            style="@style/txt_text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/dr_maeen_al_khateeb" />

                        <com.newproject.custom.CTextView
                            style="@style/txt_black_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/date_time" />

                        <com.newproject.custom.CTextViewB
                            android:id="@+id/txtDateTime"
                            style="@style/txt_text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/may_5_2020_at_10_30_am" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.newproject.custom.CTextView
                            style="@style/txt_black_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/created_by" />

                        <com.newproject.custom.CTextViewB
                            android:id="@+id/txtCreatedBy"
                            style="@style/txt_text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/carole_bates" />

                        <com.newproject.custom.CTextView
                            style="@style/txt_black_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/created_date" />

                        <com.newproject.custom.CTextViewB
                            android:id="@+id/txtCreatedDate"
                            style="@style/txt_text_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:paddingStart="1dp"
                            android:text="@string/may_5_2020_at_10_30_am" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <com.newproject.custom.CButtonView
                        style="@style/txt_white_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@drawable/shape10"
                        android:onClick="@{(v)->viewClickHandler.onStartProcess(v)}"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:text="@string/start_process"
                        android:textAllCaps="false" />

                    <com.newproject.custom.CButtonView
                        style="@style/txt_blue_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@drawable/shape11"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:onClick="@{(v)->viewClickHandler.onCancle(v)}"
                        android:text="@string/cancel"
                        android:textAllCaps="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>
</layout>